kube/qr-deployment8080.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-deployment
  labels:
    app: qrjava
    type: qrcode-generator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qrjava
      type: qrcode-generator
  template:
    metadata:
      labels:
        app: qrjava
        type: qrcode-generator
    spec:
      containers:
      - name: qrjava
        image: eu.gcr.io/qrcode-374515/qrcode-service
        imagePullPolicy :  IfNotPresent
        #ports:
        #- containerPort : 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
