kube/his-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: his-nodeport
  labels:
    app: qrhistory
    type: qrcode-history
spec:
  type: NodePort
  selector:
    app: qrhistory
    type: qrcode-history
  ports:
  - port: 8888
    targetPort: 8888
    nodePort: 30888
